2005-06-24  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/model/Model.cpp, src/components/ogre/model/ModelDefinition.h, src/components/ogre/model/Model.h, src/components/ogre/model/XMLModelDefintionSerializer.*
		* added support for particle systems
	*src/components/ogre/EmberPhysicalEntity.cpp
		* when an attribute is changed, check if this should change a particle system
	*src/components/ogre/modeldefinition/environment.modeldef.xml
		* added particles to fire
	*media/materials/textures/smoke.png
	*media/materials/textures/smokecolors.png
	*media/materials/particle/smoke.particle
	*media/materials/material/smoke.material
		* added smoke textures

2005-06-24  Erik Hjortsberg  <erik@katastrof.nu>

	* Ember.kdevelop: updated the project file

2005-06-23  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/TerrainPage.cpp: added some debug output

2005-06-23  Erik Hjortsberg  <erik@erik>

	* src/components/ogre/EmberEntityFactory.*, src/components/ogre/modeldefinitions/environment.modeldef.xml
		* removed the list of non-physical entities and put that info into the modeldef instead

2005-06-23  Erik Hjortsberg  <erik@katastrof.nu>

	*  src/components/ogre/widgets/ServerBrowserWidget.*
		* allow enter to be used in the editbox for connecting

2005-06-23  Erik Hjortsberg   <erik@katastrof.nu>


	* src/components/ogre/widgets/InspectWidget.*
		* oops, don't try to get the view until it's created

2005-06-23  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberEntityUserObject.*, AvatarCamera.cpp
	* src/components/ogre/jesus/JesusPickerObject.*
		* added a getTypeName() method to the UserObjects 
		* use the getTypeName() method in the picking methods

2005-06-23  Erik Hjortsberg  <erik@erik>

	* src/components/ogre/modeldefinitions/iteam.modeldef.xml
		* rotate the mausoleum a bit

2005-06-23  Erik Hjortsberg  <erik@erik>

	* src/components/ogre/widgets/InspectWidget.*